# IoT_ESP32_Dehumidifier

./: CMakeLists.txt  README.md  sdkconfig
components/AppUpdater/: AppUpdater.cpp  AppUpdater.h  AppUpdaterConfig.h
components/Application/: CMakeLists.txt  System.cpp  System.h
components/CmdEngine/: CMakeLists.txt  CmdEngine.cpp  CmdEngine.h  CmdKey.cpp  CmdKey.h
components/Common/: AppLog.h  CMakeLists.txt  Semaphore.cpp  Semaphore.h
components/I2c/: CMakeLists.txt  I2c.cpp  I2cPeripherals.cpp
components/MessageProtocol/: AppUpdateProtocol.h  CMakeLists.txt  HttpServer.cpp  HttpServer.h  MessagePubPool.cpp  MessagePubPool.h  MqttClient.cpp  MqttClient.h  MqttClientDelegate.cpp  MqttClientDelegate.h  ProtocolDelegate.h  ProtocolMessageInterpreter.h  SocketSessionPool.cpp  SocketSessionPool.h  WebsocketClient.cpp  WebsocketClient.h  keep_alive.cpp  keep_alive.h
components/MessageProtocol/certs/: .gitignore
components/MessageProtocol/html/: index.html  index_original.html  minimize.sh
components/SNTP/: SNTP.cpp
components/Sensor/: CMakeLists.txt
components/Sensor/DehumidFan/: DehumidFan.cpp  DehumidFan.h
components/Sensor/SensorDataPacker/: SensorDataPacker.cpp  SensorDataPacker.h
components/Sensor/TempHumid/: SHT3xSensor.cpp  SHT3xSensor.h
components/Wifi/: CMakeLists.txt  Wifi.cpp  Wifi.h
